Reposition as mission-driven platform studio
- Hero: new H1, subhead, supporting line; CTAs Discuss your platform idea / See our work
- Who we work with: 3 cards (Charities, Startups & Founders, Small Businesses)
- Case studies: TinySteps NICU Dads & LettersBeyond with trust-focused copy, Visit site, Design • Build • Deploy
- Why InkFusionLabs: differentiators list (product-first, real platforms, sensitive sectors, scalable, founder-led)
- Final CTA strip: Let's build something meaningful; contact@inkfusionlabs.co.uk sitewide
- About: founder-led trust signal; layout metadata updated for platform studio

Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:simple": "next dev --port 3000",
+    "open:local": "open http://localhost:3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
