Align homepage with spec: Our work section, nav, footer email, internal links
- Rename case studies section to 'Our work' (H2), section id work
- Nav: 'Our work' links to #work; hero 'See our work' scrolls to #work
- Footer: show contact@inkfusionlabs.co.uk as link text
- About + project pages: /#work, 'Our work' / 'Back to our work'
- PWA manifest shortcut: Our work, /#work

Made-with: Cursor

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,10 +24,10 @@
   "categories": ["business", "productivity", "technology"],
   "shortcuts": [
     {
-      "name": "Products",
-      "short_name": "Products",
-      "description": "View our products",
-      "url": "/#products",
+      "name": "Our work",
+      "short_name": "Our work",
+      "description": "View our work",
+      "url": "/#work",
       "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
     },
     {
