Reposition for self-employed & small business (commercial offer)
- Hero: H1 'Websites that win trust and bring in enquiries', subhead for self-employed/small biz; CTAs 'Get a free website review' (scroll to contact) and 'See examples'
- Who we build for: 3 cards (Trades & local services, Coaches/therapists/consultants, Small businesses & startups)
- What you get: deliverables list (mobile-first, speed, SEO, CTAs, analytics, deployment/maintenance)
- Simple packages: Starter Site, Growth Site, Care Plan (no pricing); note about quick chat
- Work & proof: TinySteps/LettersBeyond reframed as lived experience + credibility; line about commercial sites
- Why InkFusionLabs: bullets for small business (convert, fast builds, honest advice, founder-led, real products)
- Final CTA: 'Want more enquiries from your website?', mailto with subject for free review; secondary Email contact@
- Nav: Examples; footer/contact contact@ only; mailto subject Free website review where relevant
- Layout + About + manifest: new positioning copy; project pages CTA 'Get a free website review'

Made-with: Cursor

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "InkFusionLabs — Digital Product Studio",
+  "name": "InkFusionLabs — Websites for self-employed & small business",
   "short_name": "InkFusionLabs",
-  "description": "We design and build apps, websites, and tools — from idea to launch.",
+  "description": "Websites that win trust and bring in enquiries. Built for self-employed people and small businesses.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0b1220",
@@ -24,16 +24,16 @@
   "categories": ["business", "productivity", "technology"],
   "shortcuts": [
     {
-      "name": "Our work",
-      "short_name": "Our work",
-      "description": "View our work",
+      "name": "Examples",
+      "short_name": "Examples",
+      "description": "See examples",
       "url": "/#work",
       "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
     },
     {
       "name": "Contact",
       "short_name": "Contact",
-      "description": "Get in touch",
+      "description": "Get a free website review",
       "url": "/#contact",
       "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
     }
